--- a/src/app/solicitacao/solicitacao.page.scss
+++ b/src/app/solicitacao/solicitacao.page.scss
@@ -122,14 +122,14 @@ input[type="date"] {
 .hora-input,
 .minuto-input {
   width: 100%;
-  height: 70px;
-  --padding-start: 8px;
-  --padding-end: 8px;
-  text-align: center;
-  font-size: 5vw;
-  background: #fff;
+  padding: 6px 10px;
+  height: auto; /* usa o mesmo padding do input[type="date"] */
+  font-size: 4.5vw;
+  background: #d6f0d9;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #2f9e25;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .row-horario {
