adição de finalização de pedido prestador e atualizações pequenas

--- a/src/app/cadastro-cliente/cadastro-cliente.page.html
+++ b/src/app/cadastro-cliente/cadastro-cliente.page.html
@@ -28,7 +28,7 @@
         </ion-item>
       </div>
 
-      <ion-button expand="block" class="register-button" (click)="onSubmit()">Submit</ion-button>
+      <ion-button expand="block" class="register-button" (click)="onSubmit()">Cadastre-se</ion-button>
     </div>
   </div>
 </ion-content>
