--- a/src/app/pedidos-prestador/pedidos-prestador.page.html
+++ b/src/app/pedidos-prestador/pedidos-prestador.page.html
@@ -17,7 +17,7 @@
         Informações simples sobre o pedido
       </ion-card-content>
     
-      <ion-button fill="abrir" class="abrir-card">Abrir</ion-button>
+      <ion-button fill="abrir" class="abrir-card" [routerLink]="['/finalizar-pedido-prestador']">Abrir</ion-button>
     </ion-card>
 
     <ion-card>
@@ -30,7 +30,7 @@
         Informações simples sobre o pedido
       </ion-card-content>
     
-      <ion-button fill="abrir" class="abrir-card">Abrir</ion-button>
+      <ion-button fill="abrir" class="abrir-card" [routerLink]="['/finalizar-pedido-prestador']">Abrir</ion-button>
     </ion-card>
 
     <ion-card>
@@ -43,7 +43,7 @@
         Informações simples sobre o pedido
       </ion-card-content>
     
-      <ion-button fill="abrir" class="abrir-card">Abrir</ion-button>
+      <ion-button fill="abrir" class="abrir-card" [routerLink]="['/finalizar-pedido-prestador']">Abrir</ion-button>
     </ion-card>
 
     <div class="center-button">
@@ -53,5 +53,5 @@
     </div>
 
   </div>
-</ion-content>
+  </ion-content>
 <app-footer-global></app-footer-global>
