--- a/src/app/perfil-cliente/perfil-cliente.page.html
+++ b/src/app/perfil-cliente/perfil-cliente.page.html
@@ -12,7 +12,7 @@
         <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png">
       </ion-avatar>
       <ion-label class="nome-cliente-label">
-        <strong>Nome do Cliente</strong>
+        <strong>{{this.currentUser?.name}}</strong>
       </ion-label>
     </div>
 
