--- a/src/app/cadastro-prestador/cadastro-prestador.page.html
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.html
@@ -23,7 +23,7 @@
 
         <ion-item>
           <ion-label position="floating">Telefone</ion-label>
-          <ion-input type="tel" class="input-field" [(ngModel)]="telefone"></ion-input>
+          <ion-input type="tel" class="input-field"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -33,7 +33,7 @@
         </ion-item>
       </div>
 
-      <ion-button expand="block" class="register-button">Cadastrar-se</ion-button>
+      <ion-button expand="block" class="register-button" (click)="onSubmit()">Cadastrar-se</ion-button>
     </div>
   </div>
 
