--- a/src/app/cadastro-cliente/cadastro-cliente.page.scss
+++ b/src/app/cadastro-cliente/cadastro-cliente.page.scss
@@ -21,6 +21,7 @@ ion-content {
   display: flex;
   flex-direction: column;
   align-items: center; /* Centraliza horizontalmente o conteúdo interno */
+  position: fixed;
 }
 
 .logo-container {
