--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -53,7 +53,8 @@
       <ion-label class="texto-procurar-final-fixo verde-principal-texto">PROCURAR PEDIDO</ion-label>
     </div>
     <ion-button fill="clear" class="botao-detalhe-final-fixo verde-final-fixo centralizado-tela-botao abaixo-procurar">Ir para tela de serviços</ion-button>
-   
+     <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
+
 
 
 </ion-content>
