--- a/src/app/home-cliente/home-cliente.page.html
+++ b/src/app/home-cliente/home-cliente.page.html
@@ -9,17 +9,18 @@
     <div class="bgd-superior">
       <img class="img-logo" src="/assets/imagens/logo-app-coleta-verde.png" alt="logo-app-coleta-verde">
     </div>
+    <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
 
     <div class="atalhos-home">
       <h2>COLETA DE ENTULHO</h2>
       <p>Resto de tijolo, caliça e madeira</p>
-      <ion-button expand="block">Solicitar</ion-button>
+      <ion-button class="btn" expand="block">Solicitar</ion-button>
     </div>
 
     <div class="atalhos-home">
       <h2>COLETA DE LIXO COMUM</h2>
       <p>Reciclaveis, orgânico</p>
-      <ion-button expand="block">Solicitar</ion-button>
+      <ion-button class="btn" expand="block">Solicitar</ion-button>
     </div>
 
     <div class="carrossel">
