--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <app-toolbar-global [titulo]="'Pedido'"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
