--- a/src/app/pedido-prestador/pedido-prestador.page.html
+++ b/src/app/pedido-prestador/pedido-prestador.page.html
@@ -82,7 +82,7 @@
 
       <div class="botoes-finais">
         <ion-button class="btn-negociar">Negociar</ion-button>
-        <ion-button class="btn-aceitar">Aceitar</ion-button>
+        <ion-button class="btn-aceitar" (click)="aceitarSolicitacao()" >Aceitar</ion-button>
       </div>
   </div>
 </ion-content>
