ajuste footer-global

--- a/src/app/component/footer-global/footer-global.component.html
+++ b/src/app/component/footer-global/footer-global.component.html
@@ -1,17 +1,17 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <a href="/tabs/tab1" class="link-icone">
+      <a href="/home-prestador" class="link-icone">
         <img src="../../../assets/imagens/icones/iconeCasa.png" class="icone-custom" />
         <ion-label>Início</ion-label>
       </a>
 
-      <a href="/tabs/tab2" class="link-icone">
+      <a href="/pedidos-prestador" class="link-icone">
         <img src="../../../assets/imagens/icones/iconeSolicitacoes.png" class="icone-custom" />
         <ion-label>Pedidos</ion-label>
       </a>
 
-      <a href="/tabs/tab3" class="link-icone">
+      <a href="/perfil-prestador" class="link-icone">
         <img src="../../../assets/imagens/icones/iconePerfil.png" class="icone-custom" />
         <ion-label>Perfil</ion-label>
       </a>
