--- a/src/app/navegacao-teste-front/navegacao-teste-front.page.html
+++ b/src/app/navegacao-teste-front/navegacao-teste-front.page.html
@@ -31,7 +31,7 @@
       Tela home cliente
     </ion-button>
 
-    <ion-button [routerLink]="['/']">
+    <ion-button [routerLink]="['/home-prestador']">
       Tela Home prestador
     </ion-button>
 
