--- a/src/app/configuracoes/configuracoes.page.html
+++ b/src/app/configuracoes/configuracoes.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar >
       <app-toolbar-global [titulo]="'Configurações'"></app-toolbar-global>
     </ion-toolbar>
   </ion-header>
@@ -24,6 +24,5 @@
     </ion-list>
   </div>
 
-  <!-- Footer dentro do ion-content -->
   <app-footer-global></app-footer-global>
 </ion-content>
