--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -51,7 +51,8 @@
     <ion-icon name="document-text-outline" class="icone-procurar-final-fixo verde-principal icone-propostas-maior"></ion-icon>
     <ion-label class="texto-procurar-final-fixo verde-principal-texto texto-propostas-maior">ANALISAR PROPOSTAS</ion-label>
   </div>
-  
+      <ion-button fill="outline" size="small" style="margin-left: 45%;" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
+
 </ion-content>
 
 <app-footer-global></app-footer-global>
